# pythonisms

./: README.md  decorator.py  pyproject.toml
tests/: test_decorator.py  test_generators.py
