[tool.poetry]
name = "pythonisms"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"
pytest-watch = "^4.2.0"
black = "^21.4b0"
autopep8 = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
